--- a/index.html
+++ b/index.html
@@ -412,6 +412,7 @@ const galaxyContainer = document.getElementById('galaxy-container');
 const messages_galaxy = ["Em à", "Em là người đặc biệt 💖", "Anh yêu em", "Mãi yêu"];
 // >>>>> ĐIỂM CHỈNH SỬA 1: Cập nhật mảng URL ảnh <<<<<
 const imageURLs = [
+    "FB_IMG_1760927715464.jpg",
     "1000036391.jpg", 
     "1000036389.jpg", 
     "1000036390.jpg", 
